[metadata]
name = ontolearn
version = attr: ontolearn.__version__
description = Ontolearn is an open-source software library for structured machine learning in Python. Ontolearn includes modules for processing knowledge bases, inductive logic programming and ontology engineering.
author = Ontolearn team
author_email = onto-learn@lists.uni-paderborn.de
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
include_package_data = True
# packages = ontolearn, owlapy, superprop, sortedcontainers-stubs
packages = find:
scripts =
    ontolearn/endpoint/simple_drill_endpoint
install_requires =
    typing_extensions; python_version < "3.7"
    scikit-learn>=0.24.1,<1.0
    matplotlib>=3.3.4
    owlready2>=0.34
    torch>=1.7.1
    rdflib>=6.0.0
    pandas>=1.2.3
    sortedcontainers>=2.4.0
    flask>=1.1.2

[options.extras_require]
test =
    pytest>=6.2.4
    pytest-codeblocks>=0.11.2
    tox>=3.24.3
    tox-run-before>=0.1
docs =
    sphinx>=4.0.2
    sphinxext-autox>=0.0.2
    sphinx-theme>=1.0
    sphinx-rtd-theme>=0.5.1
    sphinxcontrib-plantuml>=0.21
    plantuml-local-client>=1.2021.10
    myst-parser>=0.15.2
lint =
    flake8>=3.9.2
dev =
    build>=0.6.0
    %(test)s
    %(docs)s

[options.packages.find]
exclude =
    tests
    examples

[options.package_data]
* = *.pyi, py.typed
